# srtm-bil

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: slice.h
include/srtm/: header.h  srtm.h
src/: header.c  main.c  slice.c
